@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.13 2018/07/28 14:40:50 brook Exp $
+# $NetBSD: Makefile,v 1.14 2019/07/31 20:26:23 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/sgeostat/
 COMMENT=	Object-oriented framework for geostatistical modeling in S+
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	sgeostat
-R_PKGVER=	1.0-25
+R_PKGVER=	1.0-27
 
 USE_LANGUAGES=	c fortran
 
