@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.6 2015/11/03 23:33:29 agc Exp $
+$NetBSD: distinfo,v 1.7 2019/07/31 20:26:23 brook Exp $
 
-SHA1 (R/sgeostat_1.0-25.tar.gz) = f8e614ddcaf7cd1e26009640f1a4bb5280d84519
-RMD160 (R/sgeostat_1.0-25.tar.gz) = c79dd4e34efaaa3c27954c7ccb038445e686aec5
-SHA512 (R/sgeostat_1.0-25.tar.gz) = 67befd4fe087a8ad69839561176b4bb3d15ea52388c08fd6c758d26a610a3d1b8b8ff97d774bb3b3799c3d29b97775f0fe32da89ecc882c2d2f48b4d232edc88
-Size (R/sgeostat_1.0-25.tar.gz) = 97869 bytes
+SHA1 (R/sgeostat_1.0-27.tar.gz) = ee683ab240c9ec17f8422c1bb69c017fcf2ad915
+RMD160 (R/sgeostat_1.0-27.tar.gz) = e95b8c3ff8e5cab27b695eef35e7052cae7bb523
+SHA512 (R/sgeostat_1.0-27.tar.gz) = 5c8ee87f9f2410ee901d10f2672aba69ffec10121faad38ea738ec176cdafe59e4a0e5cf3f1fb2d45e5ca7830a2d7903c6c1aff796800cb0f306639c8dd33e73
+Size (R/sgeostat_1.0-27.tar.gz) = 35685 bytes
